Fixed alignment of slider

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,20 +3,20 @@
     justify-content: space-between;
     border-left: 100px;
     border-bottom: 1px solid #000;
-
     span {
         padding: 20px;
     }
-
     .left {
         padding-left: 30px;
     }
-
 }
-
 .slider {
-    // flex seems to break swiper, use auto margins
     width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+}
+.slider-spacer {
+    flex-grow: 1;
+    background-color: #f5cdcd;
+}
+.slider-row {
+    display: flex;
 }
